Improve login and remove code generation to another project